the file has been updated

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
 				<ul class="features">
 					<li>
 						<div class="card">
-							<img src="images//saac//devices.svg" alt="Card Image" class="card-img">
+							<img src="images/saac/devices.svg" alt="Card Image" class="card-img">
 							<div class="card-content">
 								<h3 class="card-title">Sistema de Gestión de Clientes</h3>
 								<p class="card-text">Una herramienta diseñada para facilitar al usuario de la empresa el
 									acceso, manejo y análisis de información clave de los clientes nuevos.</p>
-								<a href="saac-frontend.html" class="button">Más detalles</a>
+								<a href="pages/saac-frontend.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -208,7 +208,7 @@
 								<h3 class="card-title">API Rest para Gestión de Clientes</h3>
 								<p class="card-text">Una API Rest que optimiza la comunicación y permite compartir
 									información clave de clientes entre sistemas de manera eficiente y segura.</p>
-								<a href="saac-api.html" class="button">Más detalles</a>
+								<a href="pages/saac-api.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -220,7 +220,7 @@
 								<p class="card-text">La idea de un proyecto personal diseñado para destacar mis
 									habilidades en desarrollo web, diseño visual y la capacidad de sintetizar la
 									información de manera efectiva.</p>
-								<a href="my-portfolio.html" class="button">Más detalles</a>
+								<a href="pages/my-portfolio.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -232,7 +232,7 @@
 								<p class="card-text">Consiste en una plataforma web que permite a los usuarios
 									registrarse, compartir publicaciones y conectar una comunidad a través de temas de
 									interés.</p>
-								<a href="blog-interactivo.html" class="button">Más detalles</a>
+								<a href="pages/blog-interactivo.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -243,7 +243,7 @@
 								<h3 class="card-title">On Store (Prototipo de Diseño)</h3>
 								<p class="card-text">Una aplicación conceptual que facilita a los usuarios realizar
 									pedidos de productos de forma sencilla y cómoda, directamente desde su hogar.</p>
-								<a href="on-store.html" class="button">Más detalles</a>
+								<a href="pages/on-store.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -254,7 +254,7 @@
 								<h3 class="card-title">ICE Cream (Prototipo de Rediseño)</h3>
 								<p class="card-text">Un rediseño visual enfocado en mejorar la experiencia del usuario y
 									la estética de una plataforma de venta de helados.</p>
-								<a href="ice-cream.html" class="button">Más detalles</a>
+								<a href="pages/ice-cream.html" class="button">Más detalles</a>
 							</div>
 						</div>
 					</li>
@@ -300,7 +300,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
