--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="es">
 
 <head>
 	<title>Inicio - Samoel Andres</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description"
+		content="Bienvenido a mi portafolio personal. Descubre las tecnologías en las que me especializo,
+		los proyectos que he desarrollado y como puedo ayudarte a construir soluciones innovadoras. ¡Explora y conoce más sobre mi trabajo!" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets//css/card.css">
 	<link rel="stylesheet" href="assets/css/fade-in.css">
@@ -65,7 +68,8 @@
 							<li><a href="generic.html" class="button">Más detalles</a></li>
 						</ul> -->
 					</div>
-					<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+					<!-- AGREGAR FOTORAFIA -->
+					<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
 				</div>
 			</section>
 
@@ -288,12 +292,14 @@
 					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
 					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
+							aria-label="LinkedIn">
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt">
+						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
+							aria-label="GitHub">
 							<span class="label">GitHub</span>
 						</a>
 					</li>
