the file has been optimized for SEO

--- a/pages/ice-cream.html
+++ b/pages/ice-cream.html
@@ -4,12 +4,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description"
+		content="Información acerca de mi proyecto, consiste en el rediseño de una plataforma de helados mediante la cual, los clientes pueden realizar pedidos." />
 	<link rel="stylesheet" href="../assets/css/main.css" />
 	<link rel="stylesheet" href="../assets/css/sav.css">
 	<link rel="stylesheet" href="../assets/css/fade-in.css">
@@ -285,12 +287,14 @@
 					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
 					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
+							aria-label="LinkedIn">
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt">
+						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
+							aria-label="GitHub">
 							<span class="label">GitHub</span>
 						</a>
 					</li>
