comments were removed, and additional optimizations were applied

--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
 	<title>Inicio - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Bienvenido a mi portafolio personal. Descubre las tecnologías en las que me especializo,
-		los proyectos que he desarrollado y como puedo ayudarte a construir soluciones innovadoras. ¡Explora y conoce más sobre mi trabajo!" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Hola, soy Samoel Andres. Bienvenido a mi portafolio personal, donde encontrarás las tecnologías en las que me especializo,
+		los proyectos que he desarrollado y cómo puedo ayudarte a construir soluciones innovadoras. ¡Explora mi trabajo!">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="stylesheet" href="assets//css/card.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="preload" href="assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="logo.ico">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="alt">
 			<span class="logo">
 				<svg width="85" height="85" xmlns="http://www.w3.org/2000/svg">
 					<circle cx="42.5" cy="42.5" r="42.5" fill="#ffffff" />
-					<image x="15" y="15" width="55" height="55" href="images/dev-icon.svg" />
+					<image x="15" y="15" width="55" height="55" href="images/dev-icon.svg">
 				</svg>
-
 				<h1>SAMOEL ANDRES</h1>
 				<p>¡Es un placer recbir tu visita!</p>
 		</header>
-
-		<!-- Nav -->
 		<nav id="nav">
 			<ul>
 				<li><a href="#intro" class="active">Sobre mi</a></li>
@@ -47,11 +36,8 @@
 				<li><a href="#cta">Proyectos</a></li>
 			</ul>
 		</nav>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Introduction -->
+			<!-- About of me -->
 			<section id="intro" class="main">
 				<div class="spotlight">
 					<div class="content">
@@ -68,12 +54,11 @@
 							<li><a href="generic.html" class="button">Más detalles</a></li>
 						</ul> -->
 					</div>
-					<!-- AGREGAR FOTORAFIA -->
-					<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
+					<!-- Add picture -->
+					<!-- <span class="image"><img src="images/pic01.jpg" alt="" ></span> -->
 				</div>
 			</section>
-
-			<!-- First Section -->
+			<!-- Technologies and frameworks -->
 			<section id="first" class="main special">
 				<header class="major">
 					<h2>Tecnologías y frameworks</h2>
@@ -140,14 +125,8 @@
 							diferentes versiones de un proyecto durante su desarrollo.</p>
 					</li>
 				</ul>
-				<!-- <footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Más detalles</a></li>
-					</ul>
-				</footer> -->
 			</section>
-
-			<!-- Second Section -->
+			<!-- Activity -->
 			<section id="second" class="main special">
 				<header class="major">
 					<h2>Mi actividad</h2>
@@ -180,14 +159,8 @@
 				<p class="content">El compromiso con mi propio trabajo me permiten seguir aprendiendo y mejorando
 					continuamente en mis desarrollos.<br>El planteamiento de soluciones factibles aportan al crecimiento
 					profesional y al del negocio.</p>
-				<!-- <footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Más detalles</a></li>
-					</ul>
-				</footer> -->
 			</section>
-
-			<!-- Get Started -->
+			<!-- Projects -->
 			<section id="cta" class="main special">
 				<header class="major">
 					<h2>Mis proyectos</h2>
@@ -264,18 +237,12 @@
 					</li>
 				</ul>
 			</section>
-
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Más detalles</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -288,9 +255,6 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
 						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
 							aria-label="LinkedIn">
@@ -303,15 +267,11 @@
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -319,7 +279,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
