--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		los proyectos que he desarrollado y cómo puedo ayudarte a construir soluciones innovadoras. ¡Explora mi trabajo!">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
-	<link rel="stylesheet" href="assets//css/card.css">
+	<link rel="preload" href="assets//css/card.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="preload" href="assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css">
