--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Hola, soy Samoel Andres. Bienvenido a mi portafolio personal, donde encontrarás las tecnologías en las que me especializo,
 		los proyectos que he desarrollado y cómo puedo ayudarte a construir soluciones innovadoras. ¡Explora mi trabajo!">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
 	<link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="preload" href="assets//css/card.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="preload" href="assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
