testing optimization SEO

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 	<meta name="description" content="Hola, soy Samoel Andres. Bienvenido a mi portafolio personal, donde encontrarás las tecnologías en las que me especializo,
 		los proyectos que he desarrollado y cómo puedo ayudarte a construir soluciones innovadoras. ¡Explora mi trabajo!">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet"> -->
+	<link rel="preload"
+		href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwmhduz8A.woff2" as="font"
+		type="font/woff2" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+
 	<link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="preload" href="assets//css/card.css" as="style" onload="this.rel='stylesheet'">
 	<link rel="preload" href="assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
@@ -274,12 +279,15 @@
 		</footer>
 	</div>
 	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<!-- <script  src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7V2h5F5lqPbZnHOMHEO2nvOKuNDgq3Ei23E" crossorigin="anonymous"
+		defer></script> -->
+	<script src="assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="assets/js/browser.min.js" defer></script>
+	<script src="assets/js/breakpoints.min.js" defer></script>
+	<script src="assets/js/util.js" defer></script>
+	<script src="assets/js/main.js" defer></script>
 </body>
 
 </html>
