--- a/pages/blog-interactivo.html
+++ b/pages/blog-interactivo.html
@@ -1,43 +1,37 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Información acerca de mi proyecto personal, consiste en un blog interactivo. Sus usuarios pueden conectar con otros mediante contenido de interés." />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="../assets/css/sav.css">
-	<link rel="stylesheet" href="../assets/css/fade-in.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Descubre mi proyecto personal: un blog interactivo diseñado para conectar usuarios a través de contenido de interés.
+	  Comparte, interactúa y crea comunidad.">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu.woff2"
+		as="font" type="font/woff2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="preload" as="font"
+		onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/main.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/sav.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="../assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="../logo.ico">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="text-animation">
 			<h1>Blog Interactivo</h1>
 			<p>Frontend | Laravel | MySQL | aplicación Web</p>
 		</header>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main"><img src="../images/blog/devices.svg"
-						alt="Vista del Blog Interactivo en Dispositivos" height="500" /></span>
+						alt="Vista del Blog Interactivo en Dispositivos" height="500"></span>
 
 				<h2>Objetivo</h2>
 				<p>Implementar una plataforma que permite a sus usuarios conectar con otros que comparten
@@ -109,14 +103,14 @@
 				<h2>Desafíos y soluciones</h2>
 				<p>El desarrollo de esta plataforma me llevo a afrontar una serie de desafios interesantes como:</p>
 				<ul class="Unordered">
-					<li>Desafío: Implementar la autenticación de usuarios.</li>
+					<li><strong>Desafío:</strong> Implementar la autenticación de usuarios.</li>
 					<ul class="Unordered">
-						<li>Solución: Implementé autenticación utilizando middleware de Laravel para proteger rutas y
-							validar datos.</li>
+						<li><strong>Solución:</strong> Implementé autenticación utilizando middleware de Laravel para
+							proteger rutas y validar datos.</li>
 					</ul>
-					<li>Desafío: Optimizar el rendimiento de la aplicación.</li>
+					<li><strong>Desafío:</strong> Optimizar el rendimiento de la aplicación.</li>
 					<ul class="Unordered">
-						<li>Solución: Utilice técnicas de reutilización de componentes y optimicé
+						<li><strong>Solución:</strong> Utilice técnicas de reutilización de componentes y optimicé
 							los controladores y consultas que se encargan de hacer las consultas directamente a la base
 							de datos.</li>
 					</ul>
@@ -131,18 +125,12 @@
 					<li>Un chat que permita la comunicación de usuarios en la misma plataforma.</li>
 				</ul>
 			</section>
-
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -155,38 +143,32 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
-							aria-label="LinkedIn">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon alt" aria-label="LinkedIn"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-linkedin" style="font-size: 1.4em;"></i>
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
-							aria-label="GitHub">
+						<a href="https://github.com/samoel-andres" class="icon alt" aria-label="GitHub"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-github" style="font-size: 1.4em;"></i>
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/browser.min.js"></script>
-	<script src="../assets/js/breakpoints.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/main.js"></script>
-
+	<script src="../assets/js/jquery.min.js" defer></script>
+	<script src="../assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="../assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="../assets/js/browser.min.js" defer></script>
+	<script src="../assets/js/breakpoints.min.js" defer></script>
+	<script src="../assets/js/util.js" defer></script>
+	<script src="../assets/js/main.js" defer></script>
 </body>
 
 </html>
