additional optimizations have been implemented

--- a/pages/ice-cream.html
+++ b/pages/ice-cream.html
@@ -1,43 +1,37 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Información acerca de mi proyecto, consiste en el rediseño de una plataforma de helados mediante la cual, los clientes pueden realizar pedidos." />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="../assets/css/sav.css">
-	<link rel="stylesheet" href="../assets/css/fade-in.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Rediseño de una plataforma de helados que mejora la experiencia de usuario y
+	  permite a los clientes realizar pedidos en línea de manera rápida y sencilla.">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu.woff2"
+		as="font" type="font/woff2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="preload" as="font"
+		onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/main.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/sav.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="../assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="../logo.ico">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="text-animation">
 			<h1>ICE Cream</h1>
 			<p>Diseño UX/UI | Adobe XD | Prototipo de Rediseño | Página Web</p>
 		</header>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main"><img src="../images/icecream/preview.svg" alt="Prototipo de Rediseño ICE Cream"
-						height="500" /></span>
+						height="500"></span>
 
 				<h2>Descripción</h2>
 				<p>El proyecto consta del desarrollo de una página web realizado para cumplir el objetivo principal de
@@ -109,9 +103,9 @@
 				<ul class="Unordered">
 					<li>Método usado para analizar el diseño original:</li>
 					<ul class="Unordered">
-						<li>Encuestas</li>
-						<li>Pruebas de usabilidad</li>
-						<li>Análisis de ejemplares existentes</li>
+						<li>Encuestas.</li>
+						<li>Pruebas de usabilidad.</li>
+						<li>Análisis de ejemplares existentes.</li>
 					</ul>
 				</ul>
 				<h3>Hallazgos clave</h3>
@@ -122,15 +116,15 @@
 				<h2>Propuesta de rediseño</h2>
 				<p>Mi propuesta de rediseño fue:</p>
 				<ul class="Unordered">
-					<li>Estructurar de mejor manera la información</li>
-					<li>Presentar las promociones como primera impresión al acceder a la página</li>
-					<li>Modificar el estilo del submenú de productos</li>
+					<li>Estructurar de mejor manera la información.</li>
+					<li>Presentar las promociones como primera impresión al acceder a la página.</li>
+					<li>Modificar el estilo del submenú de productos.</li>
 					<li>Mejorar la vista previa del carrito para que sea mas atractiva e interactiva.</li>
 					<li>Mejorar la sección para detalles del pedido.</li>
-					<li>Separar en interfaces separadas</li>
+					<li>Separar en interfaces separadas.</li>
 					<ul class="Unordered">
-						<li>Productos/Tienda</li>
-						<li>Detalles del pedido</li>
+						<li>Productos/Tienda.</li>
+						<li>Detalles del pedido.</li>
 					</ul>
 				</ul>
 
@@ -164,11 +158,11 @@
 
 				<h2>Proceso de rediseño</h2>
 				<ul class="Unordered">
-					<li>Fases de trabajo</li>
+					<li>Fases de trabajo:</li>
 					<ul class="Unordered">
-						<li>Ideación</li>
-						<li>Creación de prototipos</li>
-						<li>Interacciones basadas en retroalimentación</li>
+						<li>Ideación.</li>
+						<li>Creación de prototipos.</li>
+						<li>Interacciones basadas en retroalimentación.</li>
 					</ul>
 				</ul>
 
@@ -258,19 +252,13 @@
 					carrito, lo cual mejora considerablemente la experiencia del cliente. Estos aprendizajes me ayudarán
 					a diseñar interfaces más orientadas al usuario y realizar mejoras iterativas con base en datos
 					reales.</p>
-
 			</section>
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -283,38 +271,32 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
-							aria-label="LinkedIn">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon alt" aria-label="LinkedIn"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-linkedin" style="font-size: 1.4em;"></i>
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
-							aria-label="GitHub">
+						<a href="https://github.com/samoel-andres" class="icon alt" aria-label="GitHub"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-github" style="font-size: 1.4em;"></i>
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/browser.min.js"></script>
-	<script src="../assets/js/breakpoints.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/main.js"></script>
-
+	<script src="../assets/js/jquery.min.js" defer></script>
+	<script src="../assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="../assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="../assets/js/browser.min.js" defer></script>
+	<script src="../assets/js/breakpoints.min.js" defer></script>
+	<script src="../assets/js/util.js" defer></script>
+	<script src="../assets/js/main.js" defer></script>
 </body>
 
 </html>
