--- a/pages/on-store.html
+++ b/pages/on-store.html
@@ -1,43 +1,37 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Información acerca de mi proyecto personal, consiste en el diseño de un prototipo de aplicacion que permite a sus usuarios realizar pedidos de productos en línea." />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="../assets/css/sav.css">
-	<link rel="stylesheet" href="../assets/css/fade-in.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Explora mi proyecto personal: un prototipo de aplicación que facilita a los usuarios realizar pedidos de productos en línea de
+	  manera rápida y sencilla.">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu.woff2"
+		as="font" type="font/woff2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="preload" as="font"
+		onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/main.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/sav.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="../assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="../logo.ico">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="text-animation">
 			<h1>On Store</h1>
 			<p>Diseño UX/UI | Adobe XD | Prototipo | Aplicación Móvil</p>
 		</header>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main"><img src="../images/onstore/icon.svg"
-						alt="Prototipo de Diseño Aplicación de Pedidos en Línea" height="500" /></span>
+						alt="Prototipo de Diseño Aplicación de Pedidos en Línea" height="500"></span>
 
 				<h2>Descripción</h2>
 				<p>Un prototipo interactivo diseñado para optimizar el proceso de pedidos en linea, permitiendo una
@@ -119,14 +113,16 @@
 
 				<h2>Desafíos y soluciones</h2>
 				<ul class="Unordered">
-					<li>Desafío: Crear interfaces intuitivas para usuarios no acostumbrados a la tecnología.</li>
+					<li><strong>Desafío:</strong> Crear interfaces intuitivas para usuarios no acostumbrados a la
+						tecnología.</li>
 					<ul class="Unordered">
-						<li>Solución: Simplificar el diseño con botones e iconos claros.</li>
+						<li><strong>Solución:</strong> Simplificar el diseño con botones e iconos claros.</li>
 					</ul>
-					<li>Desafío: Evitar que el usuario se pierda entre las diferentes interfaces de la aplicación.</li>
+					<li><strong>Desafío:</strong> Evitar que el usuario se pierda entre las diferentes interfaces de la
+						aplicación.</li>
 					<ul class="Unordered">
-						<li>Solución: Mantener características importantes similares a otros ejemplares con la misma
-							funcionalidad.</li>
+						<li><strong>Solución:</strong> Mantener características importantes similares a otros ejemplares
+							con la misma funcionalidad.</li>
 					</ul>
 				</ul>
 
@@ -146,18 +142,12 @@
 					<li>Incorporar reseñas en redes sociales.</li>
 				</ul>
 			</section>
-
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -170,38 +160,32 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
-							aria-label="LinkedIn">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon alt" aria-label="LinkedIn"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-linkedin" style="font-size: 1.4em;"></i>
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
-							aria-label="GitHub">
+						<a href="https://github.com/samoel-andres" class="icon alt" aria-label="GitHub"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-github" style="font-size: 1.4em;"></i>
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/browser.min.js"></script>
-	<script src="../assets/js/breakpoints.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/main.js"></script>
-
+	<script src="../assets/js/jquery.min.js" defer></script>
+	<script src="../assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="../assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="../assets/js/browser.min.js" defer></script>
+	<script src="../assets/js/breakpoints.min.js" defer></script>
+	<script src="../assets/js/util.js" defer></script>
+	<script src="../assets/js/main.js" defer></script>
 </body>
 
 </html>
