--- a/pages/saac-api.html
+++ b/pages/saac-api.html
@@ -1,43 +1,37 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description"
-		content="Información acerca de mi proyecto que consiste en una API Rest para Gestión de Clientes." />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="../assets/css/sav.css">
-	<link rel="stylesheet" href="../assets/css/fade-in.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Descubre mi proyecto: una API Rest diseñada para simplificar y optimizar la gestión de clientes. Ideal para empresas que buscan 
+	  integración y eficiencia en sus procesos.">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu.woff2"
+		as="font" type="font/woff2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="preload" as="font"
+		onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/main.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/sav.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="../assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="../logo.ico">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="text-animation">
 			<h1>API Rest para Gestión de Clientes</h1>
 			<p>Desarrollo Backend | Node.js | MongoDB | API Rest</p>
 		</header>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main">
-					<img src="../images/apisaac/api.svg" alt="Imagen Referente a una API" height="500" />
+					<img src="../images/apisaac/api.svg" alt="Imagen Referente a una API" height="500">
 				</span>
 
 				<h2>¿Qué es la API de Gestión de Clientes?</h2>
@@ -59,10 +53,10 @@
 				<p>La API se estructura de manera que los usuarios puedan realizar solicitudes HTTP a los endpoints de
 					la API para interactuar con los datos:</p>
 				<ul class="Unordered">
-					<li>Autenticación del usuario (JWT)</li>
-					<li>Realización de solicitudes (GET, POST, PUT, DELETE)</li>
-					<li>Procesamiento de datos en el servidor</li>
-					<li>Envío de respuestas (JSON)</li>
+					<li>Autenticación del usuario (JWT).</li>
+					<li>Realización de solicitudes (GET, POST, PUT, DELETE).</li>
+					<li>Procesamiento de datos en el servidor.</li>
+					<li>Envío de respuestas (JSON).</li>
 				</ul>
 				<h3>Diagrama de rutas de la API</h3>
 				<p>A continuación se muestra un diagrama que ilustra cómo se estructuran y distribuyen las rutas dentro
@@ -73,12 +67,12 @@
 
 				<h2>Endpoints principales</h2>
 				<ul class="Unordered">
-					<li><strong>POST /usuarios/iniciar</strong> Realiza la autenticación del usuario.</li>
-					<li><strong>GET /clientes</strong> Obtiene una lista de clientes.</li>
-					<li><strong>POST /clientes/agregar</strong> Agrega un nuevo cliente.</li>
-					<li><strong>PUT /clientes/actualizar</strong> Actualiza los datos de cliente.</li>
+					<li><strong>POST /usuarios/iniciar:</strong> Realiza la autenticación del usuario.</li>
+					<li><strong>GET /clientes:</strong> Obtiene una lista de clientes.</li>
+					<li><strong>POST /clientes/agregar:</strong> Agrega un nuevo cliente.</li>
+					<li><strong>PUT /clientes/actualizar:</strong> Actualiza los datos de cliente.</li>
 				</ul>
-				<h3>Ejemplo de Endpoint: Autenticación de Usuario</h3>
+				<h3>Ejemplo de endpoint: Autenticación de Usuario</h3>
 				<pre>
 <code>POST /clientes/iniciar</code>
 <strong>Solicitud:</strong>
@@ -144,18 +138,12 @@
 					</ul>
 				</ul>
 			</section>
-
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -168,38 +156,32 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt"
-							aria-label="LinkedIn">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon alt" aria-label="LinkedIn"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-linkedin" style="font-size: 1.4em;"></i>
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt"
-							aria-label="GitHub">
+						<a href="https://github.com/samoel-andres" class="icon alt" aria-label="GitHub"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-github" style="font-size: 1.4em;"></i>
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/browser.min.js"></script>
-	<script src="../assets/js/breakpoints.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/main.js"></script>
-
+	<script src="../assets/js/jquery.min.js" defer></script>
+	<script src="../assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="../assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="../assets/js/browser.min.js" defer></script>
+	<script src="../assets/js/breakpoints.min.js" defer></script>
+	<script src="../assets/js/util.js" defer></script>
+	<script src="../assets/js/main.js" defer></script>
 </body>
 
 </html>
