additional optimizations have been implemented

--- a/pages/saac-frontend.html
+++ b/pages/saac-frontend.html
@@ -1,41 +1,37 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
 	<title>Proyecto - Samoel Andres</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="../assets/css/sav.css">
-	<link rel="stylesheet" href="../assets/css/fade-in.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Descubre mi proyecto 'Sistema de Gestión de Clientes', una solución diseñada para optimizar la gestión y organización de
+		tus clientes. Ideal para empresas que buscan eficiencia y automatización.">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v22/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu.woff2"
+		as="font" type="font/woff2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="preload" as="font"
+		onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/main.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/sav.css" as="style" onload="this.rel='stylesheet'">
+	<link rel="preload" href="../assets/css/fade-in.css" as="style" onload="this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="../assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css">
 	</noscript>
+	<link rel="icon" href="../logo.ico">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="is-preload">
-
-	<!-- Wrapper -->
 	<div id="wrapper">
-
-		<!-- Header -->
 		<header id="header" class="text-animation">
 			<h1>Sistema de Gestión de Clientes</h1>
 			<p>Frontend | Angular | Diseño Responsivo | Aplicación Web</p>
 		</header>
-
-		<!-- Main -->
 		<div id="main">
-
-			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main"><img src="../images/saac/devices.svg"
-						alt="Vista del Sistema de Gectión de Clientes en Diferentes Dispositivos" height="500" /></span>
+						alt="Vista del Sistema de Gectión de Clientes en Diferentes Dispositivos" height="500"></span>
 
 				<h2>Objetivo</h2>
 				<p>El objetivo es desarrollar las interfaces del sistema, para permitir la interacción y manipulación de
@@ -66,11 +62,11 @@
 					entregas parciales y revisiones periódicas. Las fases principales fueron:</p>
 				<ul class="Unordered">
 					<li><strong>Fase de diseño:</strong> Creación de prototipos y wireframes.</li>
-					<li><strong>Desarrollo:</strong> Desarrollo de las interfaces diseñadas empleando Angular</li>
+					<li><strong>Desarrollo:</strong> Desarrollo de las interfaces diseñadas empleando Angular.</li>
 					<li><strong>Pruebas de funcionalidad y depuración:</strong> Se testearon todos los componentes
 						asegurando su buen funcionamiento.</li>
 					<li><strong>Implementacion y despliegue:</strong> El lanzamiento del sistema a producción para que
-						la entidad y sus empleados pudieran hacer uso del mismo</li>
+						la entidad y sus empleados pudieran hacer uso del mismo.</li>
 				</ul>
 
 				<h2>Galería</h2>
@@ -101,14 +97,14 @@
 				<h2>Desafíos y soluciones</h2>
 				<p>Durante el desarrollo, me encontré con algunos desafíos interesantes:</p>
 				<ul class="Unordered">
-					<li>Desafío: Implementar la autenticación de usuarios.</li>
+					<li><strong>Desafío:</strong> Implementar la autenticación de usuarios.</li>
 					<ul class="Unordered">
-						<li>Solución: Implemente servicios que realizan la peticion a la API y procesan la
-							respuesta de manera segura y eficiente.</li>
+						<li><strong>Solución:</strong> Implemente servicios que realizan la peticion a la API y procesan
+							la respuesta de manera segura y eficiente.</li>
 					</ul>
-					<li>Desafío: Optimizar el rendimiento de la aplicación.</li>
+					<li><strong>Desafío:</strong> Optimizar el rendimiento de la aplicación.</li>
 					<ul class="Unordered">
-						<li>Solución: Utilice técnicas de reutilización de componentes y optimicé
+						<li><strong>Solución:</strong> Utilice técnicas de reutilización de componentes y optimicé
 							los servicios que comunican la aplicación con la API.</li>
 					</ul>
 				</ul>
@@ -129,16 +125,11 @@
 			</section>
 
 		</div>
-
-		<!-- Footer -->
 		<footer id="footer">
 			<section>
 				<h2>¿Tienes un proyecto en mente?</h2>
 				<p>Ponte en contacto conmigo y trabajemos juntos para convertir tu idea en realidad, aplicando las
 					mejores prácticas de desarrollo y asegurando un resultado excepcional.</p>
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul> -->
 			</section>
 			<section>
 				<h2>Samoel Andres</h2>
@@ -151,36 +142,32 @@
 					<dd>aevs.andres.vidal@gmail.com</dd>
 				</dl>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 					<li>
-						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon brands fa-linkedin alt">
+						<a href="https://linkedin.com/in/samoel-andres-vidal" class="icon alt" aria-label="LinkedIn"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-linkedin" style="font-size: 1.4em;"></i>
 							<span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/samoel-andres" class="icon brands fa-github alt">
+						<a href="https://github.com/samoel-andres" class="icon alt" aria-label="GitHub"
+							style="width: 2.4em !important; display: flex; justify-content: center;">
+							<i class="bi bi-github" style="font-size: 1.4em;"></i>
 							<span class="label">GitHub</span>
 						</a>
 					</li>
-					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
 			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
-
 	</div>
-
-	<!-- Scripts -->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/browser.min.js"></script>
-	<script src="../assets/js/breakpoints.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/main.js"></script>
-
+	<script src="../assets/js/jquery.min.js" defer></script>
+	<script src="../assets/js/jquery.scrollex.min.js" defer></script>
+	<script src="../assets/js/jquery.scrolly.min.js" defer></script>
+	<script src="../assets/js/browser.min.js" defer></script>
+	<script src="../assets/js/breakpoints.min.js" defer></script>
+	<script src="../assets/js/util.js" defer></script>
+	<script src="../assets/js/main.js" defer></script>
 </body>
 
 </html>
